# tdd_python

./: .gitignore  functional_tests.py
cosmic/: Dockerfile  Makefile  config.py  conftest.py  db_tables.py  docker-compose.yml  fastapi_app.py  model.py  mypy.ini  orm.py  pyproject.toml  repository.py  requirements.txt  services.py  test.db  test_allocate.py  test_api.py  test_batches.py  test_repository.py  test_services.py  util.py
cosmic/adapters/: orm.py  repository.py
cosmic/domain/: Batch.py  batch.py  model.py
cosmic/service_layer/: handlers.py  message_bus.py  services.py  unit_of_work.py
cosmic/src/: setup.py
cosmic/src/allocation/: bootstrap.py  config.py  fastapi_app.py  views.py
cosmic/src/allocation/.vim/: coc-settings.json
cosmic/src/allocation/adapters/: orm.py  redis_event_publisher.py  repository.py
cosmic/src/allocation/domain/: commands.py  events.py  model.py
cosmic/src/allocation/entrypoints/: redis_eventconsumer.py
cosmic/src/allocation/service_layer/: handlers.py  (+2 more)
cosmic/tests/: conftest.py  test_batches.py  util.py
cosmic/tests/e2e/: api_client.py  test_api.py  test_external_events.py
cosmic/tests/integration/: test_repository.py  test_uow.py
cosmic/tests/intergration/: test_repository.py  test_uow.py
cosmic/tests/unit/: test_allocate.py  test_batches.py  test_handlers.py  test_product.py  test_services.py
goat/: pyproject.toml
goat/lists/: tests.py  urls.py  views.py
goat/lists/migrations/: 0001_initial.py  0003_item_list.py
goat/superlists/: settings.py
goat/templates/lists/: home.html  list.html
(+9 files in other folders)
