[tool.poetry]
name = "cosmic"
version = "0.1.0"
description = "python architecture patterns, TDD, DDD, Event Driven Microservices"
authors = ["twinstae <rabolution@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.18"
fastapi = "^0.65.2"

[tool.poetry.dev-dependencies]
pylint = "^2.8.3"
pytest = "^6.2.4"
mypy = "^0.902"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
