[tool.poetry]
name = "cosmic"
version = "0.1.0"
description = "python architecture patterns, TDD, DDD, Event Driven Microservices"
authors = ["twinstae <rabolution@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.18"
fastapi = "^0.65.2"
aiosqlite = "^0.17.0"
requests = "^2.25.1"
pydantic = "^1.8.2"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
mypy = "^0.902"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
